@@ -93,16 +93,15 @@ Workspace.</p>
 </dl>
 
 <h3>3) Content</h3>
-<p>Fill in the fields here with content relevant to the media document.
-    Fields with a <q>Lock Val</q> check box are automatically populated by
-    Bricolage from the contents of the media file. Check the <q>Lock Val</q>
-    checkbox to override the autopopulated value and prevent Bricolage from
-    updating it in the future. If subelements have been defined for the type
-    of media document you're editing, you can select to add them from
-    the <em>Add Element</em> select list and button. Click <em>Bulk Edit</em> to
-    edit all of the content fields and elements of the media document in a
-    single textarea box.</p>
-
+<p>Fill in the fields here with content relevant to the media document. Fields
+    with an <q>Autopopulate</q> check box are automatically populated by
+    Bricolage from the contents of the media file. Uncheck
+    the <q>Autopopulate</q> to prevent Bricolage from updating it in the
+    future. If subelements have been defined for the type of media document
+    you're editing, you can select to add them from the <em>Add Element</em>
+    select list and button. Click <em>Bulk Edit</em> to edit all of the
+    content fields and elements of the media document in a single textarea
+    box.</p>
 
 <h3>4) Output Channels</h3>
 <p>This section, if present, can be used to manage media document output
